# vintergatan

./: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml  release.yml
console/: Cargo.toml
console/src/: main.rs
engine/: Cargo.toml
engine/src/: main.rs
engine/src/model/: position.rs
src/: app.rs  lib.rs  main.rs  state.rs  ui.rs  universe.rs
src/model/: board.rs  board_error.rs  border.rs  galaxy.rs  history.rs  mod.rs  objective.rs  position.rs  rectangle.rs  state.rs  universe.rs  vec2.rs
static/: index.html
tests/: app.rs  random.rs
vintergatan-rust/: Cargo.toml
vintergatan-rust/src/: lib.rs  main.rs
vintergatan-rust/src/model/: galaxy.rs  mod.rs  position.rs  rectangle.rs  universe.rs
wasm/: lib.rs  random.rs
www/: index.css  index.html  index.js  index.scss  package-lock.json  package.json  webpack.config.js
