# You must change these to your own details.
[package]
name = "vintergatan"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["Simon Olander <simon.olander@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
license = "GPL-3"
repository = "https://github.com/simonolander/vintergatan.git"

[dependencies]
leptos = { version = "0.7.1", features = ["csr"] }
itertools = "0.13.0"
petgraph = "0.6.5"
#wasm-timer = "0.2.5"
gloo-timers = { version = "0.3.0", features = ["futures"] }
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
console_error_panic_hook = "0.1.7"

# These crates are used for running unit tests.
[dev-dependencies]
proptest = "1.6.0"
